--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "ngx-mask": "^10.0.1",
     "ngx-perfect-scrollbar": "^8.0.0",
     "ngx-toastr": "^11.3.0",
+    "ngx-webstorage-service": "^4.1.0",
     "popper.js": "^1.16.0",
     "positioning": "^1.3.1",
     "primeicons": "^4.0.0",
